# krill

./: .gitignore  Cargo.toml  LICENSE  README.md  config.demo.json
data/: sample_skill_bank.json
docs/: demo-run.md  walkthrough.md
scripts/: convert_eto_trajectories.py  download_data.sh  generate_trajectories.py
src/: config.rs  lib.rs  main.rs
src/agent/: agent.rs  mod.rs
src/env/: alfworld.rs  mod.rs  traits.rs  webshop.rs
src/model/: api.rs  embedding.rs  mod.rs  prompt.rs
src/skill/: distillation.rs  evolution.rs  library.rs  mod.rs  retrieval.rs  types.rs
src/training/: advantage.rs  grpo.rs  mod.rs  pipeline.rs  sft.rs
src/trajectory/: collector.rs  mod.rs  types.rs
