[package]
name = "skillrl"
version = "0.1.0"
edition = "2021"
description = "SkillRL: Evolving Agents via Recursive Skill-Augmented Reinforcement Learning"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client for LLM APIs
reqwest = { version = "0.12", features = ["json"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Random number generation
rand = "0.8"

# Linear algebra / embeddings
ndarray = "0.16"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Ordered float for sorting
ordered-float = "4"

# UUID for skill IDs
uuid = { version = "1", features = ["v4"] }

# Chrono for timestamps
chrono = { version = "0.4", features = ["serde"] }
